--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-user fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Immgigration</h4>
+            <h4 class="service-heading">Immigration</h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
           </div>
           <div class="col-md-4">
@@ -180,17 +180,17 @@
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="#">
+                <a href="mailto:legal@jzenonos.com">
                   <i class="fa fa-envelope"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="tel:+35725312580">
                   <i class="fa fa-phone"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://goo.gl/maps/rfDx3vPQdbx">
                   <i class="fa fa-map"></i>
                 </a>
               </li>
